@@ -1,5 +1,6 @@
 package jp.co.future.uroborosql;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.IOException;
@@ -7,10 +8,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.sql.DriverManager;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -20,126 +18,9 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 
 import jp.co.future.uroborosql.config.SqlConfig;
-import jp.co.future.uroborosql.mapping.annotations.Version;
-import jp.co.future.uroborosql.utils.StringUtils;
+import jp.co.future.uroborosql.utils.ObjectUtils;
 
 public class AbstractDbTest {
-
-	public static class Product {
-		private int productId;
-		private String productName;
-		private String productKanaName;
-		private String janCode;
-		private String productDescription;
-		private Date insDatetime;
-		private Date updDatetime;
-		@Version
-		private int versionNo;
-
-		public Product() {
-		}
-
-		public Product(final int productId, final String productName, final String productKanaName,
-				final String janCode,
-				final String productDescription, final Date insDatetime, final Date updDatetime, final int versionNo) {
-			this.productId = productId;
-			this.productName = productName;
-			this.productKanaName = productKanaName;
-			this.janCode = janCode;
-			this.productDescription = productDescription;
-			this.insDatetime = insDatetime;
-			this.updDatetime = updDatetime;
-			this.versionNo = versionNo;
-		}
-
-		public int getProductId() {
-			return productId;
-		}
-
-		public void setProductId(final int productId) {
-			this.productId = productId;
-		}
-
-		public String getProductName() {
-			return productName;
-		}
-
-		public void setProductName(final String productName) {
-			this.productName = productName;
-		}
-
-		public String getProductKanaName() {
-			return productKanaName;
-		}
-
-		public void setProductKanaName(final String productKanaName) {
-			this.productKanaName = productKanaName;
-		}
-
-		public String getJanCode() {
-			return janCode;
-		}
-
-		public void setJanCode(final String janCode) {
-			this.janCode = janCode;
-		}
-
-		public String getProductDescription() {
-			return productDescription;
-		}
-
-		public void setProductDescription(final String productDescription) {
-			this.productDescription = productDescription;
-		}
-
-		public Date getInsDatetime() {
-			return insDatetime;
-		}
-
-		public void setInsDatetime(final Date insDatetime) {
-			this.insDatetime = insDatetime;
-		}
-
-		public Date getUpdDatetime() {
-			return updDatetime;
-		}
-
-		public void setUpdDatetime(final Date updDatetime) {
-			this.updDatetime = updDatetime;
-		}
-
-		public int getVersionNo() {
-			return versionNo;
-		}
-
-		public void setVersionNo(final int versionNo) {
-			this.versionNo = versionNo;
-		}
-	}
-
-	public static class BaseProductSearchBean {
-		private String productName;
-
-		public String getProductName() {
-			return this.productName;
-		}
-
-		public void setProductName(final String productName) {
-			this.productName = productName;
-		}
-	}
-
-	public static class ProductSearchBean extends BaseProductSearchBean {
-		private List<Integer> productIds;
-
-		public List<Integer> getProductIds() {
-			return this.productIds;
-		}
-
-		public void setProductIds(final List<Integer> productIds) {
-			this.productIds = productIds;
-		}
-	}
 
 	protected SqlConfig config;
 	protected SqlAgent agent;
@@ -149,15 +30,15 @@ public class AbstractDbTest {
 
 	@BeforeEach
 	public void setUp() throws Exception {
-		config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:" + this.getClass().getSimpleName()))
-				.build();
+		var url = "jdbc:h2:mem:" + this.getClass().getSimpleName() + ";DB_CLOSE_DELAY=-1";
+		config = UroboroSQL.builder(url, "sa", "").build();
 		config.getSqlAgentProvider().setFetchSize(1000);
 		var ddlPath = getDdlPath();
 		if (ddlPath != null) {
 			agent = config.agent();
 			var sqls = new String(Files.readAllBytes(ddlPath), StandardCharsets.UTF_8).split(";");
 			for (var sql : sqls) {
-				if (StringUtils.isNotBlank(sql)) {
+				if (ObjectUtils.isNotBlank(sql)) {
 					agent.updateWith(sql.trim()).count();
 				}
 			}
@@ -176,7 +57,9 @@ public class AbstractDbTest {
 
 	@AfterEach
 	public void tearDown() throws Exception {
-		agent.close();
+		if (agent != null) {
+			agent.close();
+		}
 	}
 
 	/**
@@ -192,7 +75,7 @@ public class AbstractDbTest {
 				var parts = line.split("\t");
 				for (var part : parts) {
 					var keyValue = part.split(":", 2);
-					row.put(keyValue[0].toLowerCase(), StringUtils.isBlank(keyValue[1]) ? null : keyValue[1]);
+					row.put(keyValue[0].toLowerCase(), ObjectUtils.isBlank(keyValue[1]) ? null : keyValue[1]);
 				}
 				ans.add(row);
 			});
@@ -208,7 +91,7 @@ public class AbstractDbTest {
 	 * @param tables truncateするテーブル名（複数指定可）
 	 */
 	protected void truncateTable(final Object... tables) {
-		Arrays.asList(tables).stream().forEach(tbl -> {
+		List.of(tables).stream().forEach(tbl -> {
 			try {
 				agent.updateWith("truncate table " + tbl.toString()).count();
 			} catch (Exception ex) {
@@ -237,6 +120,14 @@ public class AbstractDbTest {
 				fail("TABLE:" + map.get("TABLE") + " insert is miss. ex:" + ex.getMessage());
 			}
 		});
+		agent.commit();
+	}
+
+	protected void assertFile(final String expectedFilePath, final String actualFilePath) throws IOException {
+		var expected = new String(Files.readAllBytes(Paths.get(expectedFilePath)), StandardCharsets.UTF_8);
+		var actual = new String(Files.readAllBytes(Paths.get(actualFilePath)), StandardCharsets.UTF_8);
+
+		assertEquals(expected, actual);
 	}
 
 }
