@@ -7,18 +7,12 @@ import static org.hamcrest.Matchers.is;
 import java.io.BufferedReader;
 import java.io.StringReader;
 import java.sql.DriverManager;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
-
-import jp.co.future.uroborosql.context.ExecutionContext;
-import jp.co.future.uroborosql.filter.AbstractSqlFilter;
 
 /**
  * エラーハンドリングのテスト
@@ -35,24 +29,17 @@ public class SqlAgentSqlIdTest {
 	@Test
 	void testDefault() throws SQLException {
 		List<List<String>> querys = new ArrayList<>();
-		var config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:SqlAgentSqlIdTest")).build();
-		config.getSqlFilterManager().addSqlFilter(new AbstractSqlFilter() {
-
-			@Override
-			public ResultSet doQuery(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
-					final ResultSet resultSet)
-					throws SQLException {
-				querys.add(toLines(ExecutionContext.getExecutableSql()));
-				return super.doQuery(ExecutionContext, preparedStatement, resultSet);
-			}
-
+		var config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:" + this.getClass().getSimpleName() + ";DB_CLOSE_DELAY=-1")).build();
+		config.getEventListenerHolder().addSqlQueryListener(evt -> {
+			querys.add(toLines(evt.getExecutionContext().getExecutableSql()));
 		});
 		try (var agent = config.agent()) {
 			agent.update("ddl/create_tables").count();
-			agent.query("sqlid_test/select_product").collect();
+			agent.query("sqlid_test/select_product")
+					.collect();
 		}
 		assertThat(querys, is(contains(
-				Arrays.asList("SELECT /* sqlid_test/select_product */", "\t*", "FROM", "\tPRODUCT", "WHERE 1 = 1",
+				List.of("SELECT /* sqlid_test/select_product */", "\t*", "FROM", "\tPRODUCT", "WHERE 1 = 1",
 						"ORDER BY PRODUCT_ID"))));
 
 	}
@@ -65,24 +52,17 @@ public class SqlAgentSqlIdTest {
 	@Test
 	void testDefault2() throws SQLException {
 		List<List<String>> querys = new ArrayList<>();
-		var config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:SqlAgentSqlIdTest")).build();
-		config.getSqlFilterManager().addSqlFilter(new AbstractSqlFilter() {
-
-			@Override
-			public ResultSet doQuery(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
-					final ResultSet resultSet)
-					throws SQLException {
-				querys.add(toLines(ExecutionContext.getExecutableSql()));
-				return super.doQuery(ExecutionContext, preparedStatement, resultSet);
-			}
-
+		var config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:" + this.getClass().getSimpleName() + ";DB_CLOSE_DELAY=-1")).build();
+		config.getEventListenerHolder().addSqlQueryListener(evt -> {
+			querys.add(toLines(evt.getExecutionContext().getExecutableSql()));
 		});
 		try (var agent = config.agent()) {
 			agent.update("ddl/create_tables").count();
-			agent.query("sqlid_test/select_product_custom").collect();
+			agent.query("sqlid_test/select_product_custom")
+					.collect();
 		}
 		assertThat(querys, is(contains(
-				Arrays.asList("SELECT /* _TESTSQL_ID_ */", "\t*", "FROM", "\tPRODUCT", "WHERE 1 = 1",
+				List.of("SELECT /* _TESTSQL_ID_ */", "\t*", "FROM", "\tPRODUCT", "WHERE 1 = 1",
 						"ORDER BY PRODUCT_ID"))));
 	}
 
@@ -94,25 +74,18 @@ public class SqlAgentSqlIdTest {
 	@Test
 	void testCustom() throws SQLException {
 		List<List<String>> querys = new ArrayList<>();
-		var config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:SqlAgentSqlIdTest")).build();
+		var config = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:" + this.getClass().getSimpleName() + ";DB_CLOSE_DELAY=-1")).build();
 		config.getSqlAgentProvider().setSqlIdKeyName("_TESTSQL_ID_");
-		config.getSqlFilterManager().addSqlFilter(new AbstractSqlFilter() {
-
-			@Override
-			public ResultSet doQuery(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
-					final ResultSet resultSet)
-					throws SQLException {
-				querys.add(toLines(ExecutionContext.getExecutableSql()));
-				return super.doQuery(ExecutionContext, preparedStatement, resultSet);
-			}
-
+		config.getEventListenerHolder().addSqlQueryListener(evt -> {
+			querys.add(toLines(evt.getExecutionContext().getExecutableSql()));
 		});
 		try (var agent = config.agent()) {
 			agent.update("ddl/create_tables").count();
-			agent.query("sqlid_test/select_product_custom").collect();
+			agent.query("sqlid_test/select_product_custom")
+					.collect();
 		}
 		assertThat(querys, is(contains(
-				Arrays.asList("SELECT /* sqlid_test/select_product_custom */", "\t*", "FROM", "\tPRODUCT",
+				List.of("SELECT /* sqlid_test/select_product_custom */", "\t*", "FROM", "\tPRODUCT",
 						"WHERE 1 = 1", "ORDER BY PRODUCT_ID"))));
 
 	}
